Trigger staging deployment

--- a/website/index.html
+++ b/website/index.html
@@ -35,6 +35,7 @@
 
       <!-- Theme Color -->
       <meta name="theme-color" content="#000000" />
+      <!-- Build trigger -->
 
       <!-- Line Icons -->
       <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
